<resources>
    <string name="app_name">MoveMaster95</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="steps_counted">Steps counted:</string>
    <string name="step_count_placeholder" translatable="false">0</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="profile_page_greeting_placeholder">Hello!</string>
    <string name="pref_user_name" translatable="false">username</string>
    <string name="pref_user_name_title">Name</string>
    <string name="pref_user_name_username_sum">Change username</string>
    <string name="pref_user_name_username_hint">Your name</string>
    <string name="pref_user_height" translatable="false">height</string>
    <string name="pref_user_height_title">Height</string>
    <string name="pref_user_height_sum">Set height</string>
    <string name="pref_user_height_hint">Set height (cm)</string>
    <string name="pref_user_weight" translatable="false">weight</string>
    <string name="pref_user_weight_title">Weight</string>
    <string name="pref_user_weight_sum">Set weight</string>
    <string name="pref_user_weight_hint">Set weight (kg)</string>
    <string name="photo_pref" translatable="false">photopath</string>
    <string name="photo_pref_title">Profile Picture Path</string>
    <string name="photo_pref_sum" translatable="false" />
    <string name="profile_picture">Profile Picture</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="step_count" translatable="false">step_count</string>
    <string name="step_count_title">Total steps</string>
    <string name="step_count_summary" translatable="false" />
    <string name="duck_meter">Ducks blasted:</string>
</resources>
